--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@gympass/yoga": "^7.3.2",
     "commitizen": "^4.2.4",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -40,6 +42,6 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-     }
+    }
   }
 }
