chore(babelrc): add babel-plugin-styled-components

--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,12 @@
   "presets": ["next/babel"],
   "plugins": [
     [
-      "styled-components",
+      "babel-plugin-styled-components",
       {
         "ssr": true,
+        "minify": true,
+        "transpileTemplateLiterals": true,
+        "pure": true,
         "displayName": true,
         "preprocess": false
       }
