--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "babel-plugin-styled-components": "^1.13.1",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
